unpackaged/main/default/objects/Matter_Budget__c/Matter_Budget__c.object-meta.xml
<CustomObject>
    <description>IDB Invest Budget</description>
    <label>Matter Budget</label>
    <nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Matter Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>