unpackaged/main/default/objects/Matter_Budget__c/fields/Admin_Budget__c.field-meta.xml
<CustomField>
    <fullName>Admin_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select Admin Budget if a Secondary Approver is required</inlineHelpText>
    <label>Admin Budget</label>
    <type>Checkbox</type>
</CustomField>