unpackaged/main/default/objects/Matter_Budget__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Law Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Matter_Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>