unpackaged/main/default/objects/Matter_Budget__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <referenceTo>LegalStratusISV__Matter__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Matter_Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>