unpackaged/main/default/objects/Matter_Budget__c/fields/Matter_Phase__c.field-meta.xml
<CustomField>
    <fullName>Matter_Phase__c</fullName>
    <label>Matter Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-closing</fullName>
            </value>
            <value>
                <fullName>Post-closing</fullName>
            </value>
            <value>
                <fullName>Workout</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>