unpackaged/main/default/objects/Matter_Budget__c/fields/Responsible_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Payment__c</fullName>
    <label>Responsible for Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment by GCL</fullName>
            </value>
            <value>
                <fullName>Payment by INO</fullName>
            </value>
            <value>
                <fullName>Payment by Client</fullName>
            </value>
            <value>
                <fullName>Payment by Advisory Services – Administered Funds</fullName>
            </value>
            <value>
                <fullName>Payment hybrid – IDB Invest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>