unpackaged/main/default/objects/Matter_Budget__c/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <description>Total of Fee + Expense</description>
    <formula>Fee__c + Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>